# oracle-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
assets/maps/: horon-village-autumn.ase  horon-village-autumn.map  horon-village-spring.map  horon-village-summer.map  horon-village-winter.ase  horon-village-winter.map  test.csv
assets/shaders/: framebuffer.glsl  sprite.glsl  tilemap.glsl
assets/sprites/: link-frames.yaml  link.ase  link.json  link.yaml
assets/tilesets/: Sprite-0002.json  holodrum-spring.ase  horon-village-spring.ase  horon-village-summer.ase  horon-village.yaml  town.txt
include/: AssetManager.h  Game.h  GameObject.h  Input.h  Tilemap.h  Tileset.h  Vector3.h  Window.h  types.h
include/Graphics/: Camera.h  FrameBuffer.h  Renderer.h  Shader.h  Texture2D.h
include/glad/: glad.h
src/: AssetManager.cpp  Game.cpp  GameObject.cpp  Input.cpp  Tilemap.cpp  Tileset.cpp  Window.cpp  glad.c  main.cpp  stb_image.cpp
src/Graphics/: Camera.cpp  FrameBuffer.cpp  Renderer.cpp  Shader.cpp  Texture2D.cpp
